--- a/plugins/CorePluginsAdmin/lang/en.json
+++ b/plugins/CorePluginsAdmin/lang/en.json
@@ -14,23 +14,17 @@
         "BackToExtendPiwik": "Back to Marketplace",
         "BeCarefulUsingPlugins": "Plugins that are not authored by Piwik team must be used with care: we did not review them.",
         "BeCarefulUsingThemes": "Themes that are not authored by Piwik team must be used with care: we did not review them.",
-        "ByDesigningOwnTheme": "by %sdesigning your own theme%s",
-        "ByInstallingNewPluginFromMarketplace": "by %sinstalling a new plugin from the Marketplace%s",
-        "ByInstallingNewThemeFromMarketplace": "by %sinstalling a new theme from the Marketplace%s",
-        "ByWritingOwnPlugin": "by %swriting your own plugin%s",
         "ByXDevelopers": "by %s developers",
         "Changelog": "Changelog",
         "ChangeSettingsPossible": "You can change %ssettings%s for this plugin.",
         "CorePluginTooltip": "Core plugins have no version since they are distributed with Piwik.",
         "Deactivate": "Deactivate",
         "Developer": "Developer",
+        "DevelopersLearnHowToDevelopPlugins": "Developers: Learn how you can extend and customize Piwik by %sdeveloping plugins or themes%s.",
         "DoMoreContactPiwikAdmins": "To install a new plugin or a new theme, please get in touch with your Piwik admins.",
-        "DownloadAndInstallPluginsFromMarketplace": "You may automatically download and install new Plugins from the %sMarketplace%s.",
         "EmailToEnquireUpdatedVersion": "Please email %1$s and enquire an updated version of %2$s.",
-        "EnjoyAnotherLookAndFeelOfThemes": "Enjoy another look & feel",
         "FeaturedPlugin": "Featured plugin",
         "GetEarlyAccessForPaidPlugins": "Note: all plugins are available for free at present; in the future we will enable Paid Plugins in the Marketplace (%scontact us%s for early access).",
-        "GetNewFunctionality": "Get new functionality",
         "History": "History",
         "Inactive": "Inactive",
         "InfoPluginUpdateIsRecommended": "Update your plugins now to benefit from the latest improvements.",
@@ -42,7 +36,8 @@
         "LastCommitTime": "(last commit %s)",
         "LastUpdated": "Last Updated",
         "LicenseHomepage": "License Homepage",
-        "MainDescription": "Plugins extend and expand the functionality of Piwik. Once a plugin is installed, you may activate it or deactivate it here.",
+        "PluginsExtendPiwik": "Plugins extend and expand the functionality of Piwik.",
+        "OncePluginIsInstalledYouMayActivateHere": "Once a plugin is installed, you may activate it or deactivate it here.",
         "Marketplace": "Marketplace",
         "MarketplaceSellPluginSubject": "Marketplace - Sell Plugin",
         "MenuPlatform": "Platform",
@@ -55,8 +50,6 @@
         "NoZipFileSelected": "Please select a ZIP file.",
         "NumDownloadsLatestVersion": "Latest version: %s Downloads",
         "NumUpdatesAvailable": "%s Update(s) available",
-        "OrByUploadingAPlugin": "or by %suploading a plugin%s",
-        "OrByUploadingATheme": "or by %suploading a theme%s",
         "Origin": "Origin",
         "OriginCore": "Core",
         "OriginThirdParty": "Third-party",
@@ -91,6 +84,7 @@
         "TeaserExtendPiwikByPlugin": "Extend Piwik by installing a new plugin",
         "TeaserExtendPiwikByTheme": "Enjoy another look & feel by installing a new theme",
         "TeaserExtendPiwikByUpload": "Extend Piwik by uploading a ZIP file",
+        "InstallingNewPluginViaMarketplaceOrUpload": "You may automatically install plugins from the Marketplace or %supload a plugin%s in .zip format.",
         "Theme": "Theme",
         "Themes": "Themes",
         "ThemesDescription": "Themes can change the appearance of Piwik user interface, and provide a completely new visual experience to enjoy your analytics reports.",
