--- a/plugins/VisitTime/lang/en.json
+++ b/plugins/VisitTime/lang/en.json
@@ -5,19 +5,19 @@
         "ColumnLocalMinute": "Local time - minute (Start of visit)",
         "ColumnServerTime": "Server time",
         "ColumnServerHour": "Server time - hour",
-        "ColumnVisitEndServerHour": "Server time - hour (End of visit)",
-        "ColumnVisitEndServerMinute": "Server time - minute (End of visit)",
+        "ColumnVisitEndServerHour": "Server time - hour (Time of last action)",
+        "ColumnVisitEndServerMinute": "Server time - minute (Time of last action)",
         "ColumnVisitStartServerHour": "Server time - hour (Start of visit)",
         "ColumnVisitStartServerMinute": "Server time - minute (Start of visit)",
-        "ColumnVisitEndServerDate": "Server time - date (End of visit)",
-        "ColumnVisitEndServerDayOfMonth": "Server time - day of month (End of visit)",
-        "ColumnVisitEndServerDayOfWeek": "Server time - day of week (End of visit)",
-        "ColumnVisitEndServerDayOfYear": "Server time - day of year (End of visit)",
-        "ColumnVisitEndServerQuarter": "Server time - quarter (End of visit)",
-        "ColumnVisitEndServerSecond": "Server time - second (End of visit)",
-        "ColumnVisitEndServerWeekOfYear": "Server time - week of year (End of visit)",
-        "ColumnVisitEndServerMonth": "Server time - month (End of visit)",
-        "ColumnVisitEndServerYear": "Server time - year (End of visit)",
+        "ColumnVisitEndServerDate": "Server time - date (Time of last action)",
+        "ColumnVisitEndServerDayOfMonth": "Server time - day of month (Time of last action)",
+        "ColumnVisitEndServerDayOfWeek": "Server time - day of week (Time of last action)",
+        "ColumnVisitEndServerDayOfYear": "Server time - day of year (Time of last action)",
+        "ColumnVisitEndServerQuarter": "Server time - quarter (Time of last action)",
+        "ColumnVisitEndServerSecond": "Server time - second (Time of last action)",
+        "ColumnVisitEndServerWeekOfYear": "Server time - week of year (Time of last action)",
+        "ColumnVisitEndServerMonth": "Server time - month (Time of last action)",
+        "ColumnVisitEndServerYear": "Server time - year (Time of last action)",
         "ColumnServerMinute": "Server time - minute",
         "DayOfWeek": "Day of the week",
         "LocalTime": "Visits per local time",
