--- a/plugins/PrivacyManager/lang/en.json
+++ b/plugins/PrivacyManager/lang/en.json
@@ -40,7 +40,20 @@
         "AskForConsentStep4DescB": "B) if you use your own consent tool to remember the consent",
         "AskForConsentStep4DescBDesc": "When the user has expressed she or he no longer gives consent, you shall not call the following method anymore:",
         "AskForConsentStepNotes": "Notes:",
+        "AwarenessDocumentation": "Awareness & documentation",
+        "AwarenessDocumentationIntro": "Inform your users clearly and transparently, and make your colleagues aware of the data being collected and how it is used:",
+        "AwarenessDocumentationDesc1": "Inform your visitors through a clear privacy notice whenever you’re collecting personal data.",
+        "AwarenessDocumentationDesc2": "Inform your users in your privacy policy about what data you collect and how the data is used.",
+        "AwarenessDocumentationDesc3": "Make your team aware that you are using Matomo Analytics and %1$swhat data is being collected by your analytics platform%2$s.",
+        "AwarenessDocumentationDesc4": "Document your use of Matomo within your %1$sinformation asset register%2$s.",
         "CurrentDBSize": "Current database size",
+        "DataRetention": "Data retention",
+        "DataRetentionInMatomo": "Data retention for data stored in Matomo:",
+        "DataRetentionOverall": "The overall data retention rate for your privacy policy is the raw data retention rate. Please note that aggregated reports may contain personal data as well. If you are using features like User ID, Custom Variables, Custom Dimension, or track personal data in other ways such as events, page URLs or page titles, etc, then the overall data retention rate for your privacy policy is the higher of the two.",
+        "RawDataRemovedAfter": "all visits and actions raw data are deleted after %1$s.",
+        "RawDataNeverRemoved": "visits and actions raw data are <strong>never</strong> deleted.",
+        "ReportsRemovedAfter": "all aggregated reports are deleted after %1$s.",
+        "ReportsNeverRemoved": "aggregated reports are <strong>never</strong> deleted.",
         "DBPurged": "DB purged.",
         "DeleteBothConfirm": "You are about to enable both raw data deletion & report data deletion. This will permanently remove your ability to view old analytics data. Are you sure you want to do this?",
         "DeleteDataDescription": "You can configure Matomo to regularly delete old raw data and\/or aggregated reports to keep your database small or to meet privacy regulations such as GDPR.",
@@ -75,9 +88,23 @@
         "GeolocationAnonymizeIpNote": "Note: Geolocation will have approximately the same results with 1 byte anonymized. With 2 bytes or more, Geolocation will be inaccurate.",
         "GDPR": "GDPR",
         "GdprManager": "GDPR Manager",
+        "GdprChecklists": "GDPR checklists",
+        "GdprChecklistDesc1": "If you are processing personal data of European citizens through Matomo, even if your company is located outside Europe, you need to fulfill GDPR obligations and this guide will help you.",
+        "GdprChecklistDesc2": "Find below our tools that let you exercise your users’ rights easily, and the list of actions to take in order to make your use of Matomo compliant with the GDPR and safeguard your data. Visit our %1$sGDPR User guide%2$s to learn even more.",
         "GdprOverview": "GDPR Overview",
+        "GdprOverviewIntro1": "The General Data Protection Regulation (GDPR) is a regulation which strengthens and unifies data protection for all individuals within the European Union (EU).",
+        "GdprOverviewIntro2": "If you take steps to ensure no personal data is collected in Matomo, then you may not be concerned by the GDPR for Matomo (if you track no IP addresses, no user IDs, no geolocation data, etc.).",
         "GdprTools": "GDPR Tools",
         "GetPurgeEstimate": "Get purge estimate",
+        "IndividualsRights": "Individuals' rights",
+        "IndividualsRightsIntro": "Exercise the rights of your users with our GDPR-friendly procedures:",
+        "IndividualsRightsInform": "The right to be informed: inform your users with a clear privacy notice.",
+        "IndividualsRightsAccess": "The right of access: %1$ssearch for a data subject%2$s and export all of their data.",
+        "IndividualsRightsErasure": "The right to erasure: %1$ssearch for a data subject%2$s and delete some or all of their data.",
+        "IndividualsRightsRectification": "The right to rectification: you can %1$ssearch for a data subject%2$s and delete some or all of their data.",
+        "IndividualsRightsPortability": "The right to data portability: %1$ssearch for a data subject%2$s and export all of their data.",
+        "IndividualsRightsObject": "The right to object: %1$slet your users easily opt-out%2$s on your privacy policy page.",
+        "IndividualsRightsChildren": "If you offer online services to children and rely on consent to collect information about them, then you may need a parent or guardian’s consent in order to process the children’s personal data lawfully.",
         "KeepBasicMetrics": "Keep basic metrics (visits, page views, bounce rate, goal conversions, ecommerce conversions, etc.)",
         "KeepDataFor": "Keep all data for",
         "KeepReportSegments": "For kept data above, also keep segmented reports",
@@ -86,7 +113,7 @@
         "LeastMonthsInput": "Please specify a number of months greater than %s.",
         "MenuPrivacySettings": "Privacy",
         "NextDelete": "Next scheduled deletion in",
-        "PluginDescription": "Increase Privacy for your users and make your Matomo instance privacy compliant with your local legislation.  ",
+        "PluginDescription": "Increase Privacy for your users and make your Matomo instance privacy compliant with your local legislation.",
         "PurgeNow": "Purge DB Now",
         "PurgeNowConfirm": "You are about to permanently delete data from your database. Are you sure you want to continue?",
         "PurgingData": "Purging data...",
@@ -94,6 +121,12 @@
         "ReportsDataSavedEstimate": "Database size",
         "SaveSettingsBeforePurge": "You have changed the data deletion settings. Please save them before starting a purge.",
         "SeeAlsoOurOfficialGuidePrivacy": "See also our official guide: %1$sWeb Analytics Privacy%2$s",
+        "SecurityProcedures": "Security procedures",
+        "SecurityProceduresIntro": "Inform your users clearly and transparently, and make your colleagues aware of the data being collected and how it is used:",
+        "SecurityProceduresDesc1": "Apply our %1$ssecurity recommendations%2$s in order to keep your Matomo data safe.",
+        "SecurityProceduresDesc2": "Check that you have a written contract with the company providing you the Matomo server or hosting which ensures %1$sappropriate safeguards are provided%2$s.",
+        "SecurityProceduresDesc3": "Include Matomo in your %1$sdata breach procedure%2$s.",
+        "SecurityProceduresDesc4": "Include Matomo in your %1$sdata privacy impact assessment (DPIA)%2$s, if applicable.",
         "TeaserHeader": "On this page, you can customize Matomo to make it privacy compliant with existing legislations, by: %1$s anonymizing the visitor IP%2$s, %3$s automatically remove old visitor logs from the database%4$s, and %5$s anonymize previously tracked raw users' data%6$s.",
         "TeaserHeadline": "Privacy Settings",
         "UseAnonymizedIpForVisitEnrichment": "Also use the Anonymized IP addresses when enriching visits.",
