--- a/plugins/PrivacyManager/lang/en.json
+++ b/plugins/PrivacyManager/lang/en.json
@@ -138,6 +138,14 @@
         "UseAnonymizeTrackingData": "Anonymize Tracking Data",
         "UseAnonymizeUserId": "Anonymize User ID",
         "PseudonymizeUserId": "Replace User ID with a pseudonym",
+        "OptOutCustomize": "Customize the Opt-out iframe",
+        "OptOutHtmlCode": "HTML code to embed on your website",
+        "OptOutPreview": "Preview of the Opt-out as it will appear on your website",
+        "FontColor": "Font Color",
+        "FontSize": "Font Size",
+        "FontFamily": "Font Family",
+        "BackgroundColor": "Background Color",
+        "TrackingOptOut": "Let users opt-out of tracking",
         "UseAnonymizeOrderId": "Anonymize Order ID",
         "UseDeleteLog": "Regularly delete old raw data from the database",
         "UseDeleteReports": "Regularly delete old reports from the database",
